# spaghetti-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: spike_parser.rs  spike_similarity.rs
src/: ast_helpers.rs  cli.rs  config.rs  lib.rs  main.rs  models.rs  scanner.rs  scoring.rs  similarity.rs  suppression.rs  unparse.rs
src/checks/: ast_per_file.rs  mod.rs  package_level.rs  text_per_file.rs
tests/: cli.rs
