[package]
name = "spaghetti-detector-rs"
version = "0.1.1"
edition = "2024"
description = "Spaghetti-code and architectural-smell detector for Python projects (Rust port)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lvalverdeb/spaghetti-rs"
homepage = "https://github.com/lvalverdeb/spaghetti-rs"
documentation = "https://github.com/lvalverdeb/spaghetti-rs#readme"
keywords = ["static-analysis", "linter", "python", "code-quality"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Luis Valverde"]

[[bin]]
name = "spaghetti"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
indexmap = "2.14.0"
rayon = "1.12.0"
regex = "1.13.1"
rustpython-ast = { version = "0.4.0", features = ["unparse", "visitor"] }
rustpython-parser = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
similar = "3.1.1"
toml = "1.1.3"
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
